--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@
   justify-content: space-between;
   font-size: 15px;
 }
-.list-content button {
-  margin: 0 5px;
+#list-items li i {
+  margin: 0 10px;
   appearance: none;
   outline: none;
   border: none;
