--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body{
   color: var(--drk-blue);
   justify-content: space-between;
   font-size: 20px;
+  word-break: break-all;
 }
 .list-content i {
   margin: 0 25px;
